chassis/tests/failing/comp_no_default_impl.stderr
error: custom attribute panicked
 --> $DIR/comp_no_default_impl.rs:5:1
  |
5 | #[integration]
  | ^^^^^^^^^^^^^^
  |
  = help: message: explicit panic
